# LeMoS-inflowgenerator

./: CMakeLists.txt  README.md  README.txt  inflow-generator.module  inflowchannel.cpp  inflowchannel.h  inflowflatplatebl.cpp  inflowflatplatebl.h  inflowstatisticstest.cpp  inflowstatisticstest.h  syntheticturbulencecaseelements.cpp  syntheticturbulencecaseelements.h  testinflowgeneratorrs.cpp  testinflowgeneratorrs.h
doc/: manual_inflowgenerator.tex
extensions/openfoam/DSFRG1/: DSRFG1FvPatchVectorField.C  DSRFG1FvPatchVectorField.H
extensions/openfoam/aux/fieldDataProvider/: fielddataproviders.cpp.dep  vectorspacebase.cpp.dep
extensions/openfoam/aux/globalPatch/: globalPatch.C.dep
extensions/openfoam/checkInflowGeneratorStatistics/: CMakeLists.txt  checkInflowGeneratorStatistics.C
extensions/openfoam/inflowGeneratorBC/: CMakeLists.txt  TurbulentSpotVolumeInserter.C  TurbulentSpotVolumeInserter.H  boostRandomGen.C  boostRandomGen.H  inflowGeneratorBaseFvPatchVectorField.C  inflowGeneratorBaseFvPatchVectorField.H  inflowGeneratorFvPatchVectorField.C  inflowGeneratorFvPatchVectorField.H  inflowGeneratorFvPatchVectorFieldFwd.C  inflowgeneratorbase.cpp  inflowgeneratorbase.h  modalTurbulenceFvPatchVectorField.C  modalTurbulenceFvPatchVectorField.H  recursiveapply.h  structurebasedinflowgenerator.cpp  structurebasedinflowgenerator.h  turbulentForcingFvOption.C  turbulentForcingFvOption.H  turbulentScalarFvPatchField.H  turbulentSpotVolumeInserters.C  vortonqueue.cpp  vortonqueue.h
extensions/openfoam/inflowGeneratorBC/Make.OFesi2012_Mint_21/: options
extensions/openfoam/inflowGeneratorBC/Make.OFesi2106_Mint_Debian_Edition5/: files  options
extensions/openfoam/inflowGeneratorBC/turbulentStructures/: anisotropicvorton.cpp  anisotropicvorton.h  hatspot.h  turbulentstructure.cpp  turbulentstructure.h
extensions/openfoam/inflowGeneratorBC/turbulentStructures/combinedVorton/: CMakeLists.txt  combinedVorton.C  combinedVorton.H
extensions/openfoam/inflowGeneratorBC/turbulentStructures/decayingTurbulenceVorton/: decayingTurbulenceVorton.C  decayingTurbulenceVorton.H
extensions/openfoam/inflowGeneratorBC/turbulentStructures/gaussianSpot/: gaussianSpot.C  gaussianSpot.H
extensions/openfoam/inflowGeneratorBC/turbulentStructures/homogeneousTurbulenceVorton/: homogeneousTurbulenceVorton.C  homogeneousTurbulenceVorton.H
extensions/openfoam/inflowGeneratorBC/turbulentStructures/turbulentStructure/: turbulentStructure.C  turbulentStructure.H
extensions/openfoam/initInflowGenerator/: CMakeLists.txt
extensions/openfoam/superposeIsotropicTurbulence/: CMakeLists.txt  superposeIsotropicTurbulence.C
test/: CMakeLists.txt  inflowchannel_parallel.ist  run_inflowchannel_parallel.sh
test/inflowGeneratorBC/: CMakeLists.txt  pimpleFoam_pipe_inflow.iscb  runOFTest.sh  test_inflowGeneratorParallelization.cpp
toolkit/base/: exception.cpp.dep  linearalgebra.cpp.dep  units.cpp.dep
